snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.095327-2.module.sha512
15c4d6d96ed9f9d0b0539d3522bdc02db597990dd857d78d6cb8ada813f1eecbef1c991578e3d6741e1a0a3e7dc3f1f10118d83d7bc1b69a0bd6dc84c49d1148